tests/scripts/errors/runtime/wrong_arity_too_many.cdo
FUNCTION add(a, b) { RETURN a + b; }
print(add(1, 2, 3, 4));
